# backpack

./: .backpack.yaml  .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  install.ps1  install.sh  rustwrap.yaml
backpack/: Cargo.toml
backpack/src/: actions.rs  camp.rs  config.rs  content.rs  data.rs  fetch.rs  git.rs  lib.rs  merge.rs  prompt.rs  run.rs  shortlink.rs  swapper.rs  templates.rs  ui.rs  vendors.rs
backpack/src/snapshots/: backpack__actions__tests__interaction-2.snap  backpack__actions__tests__interaction.snap  backpack__actions__tests__run_script-2.snap  backpack__actions__tests__run_script.snap  backpack__config__tests__load_remote_projects.snap  backpack__config__tests__merge_sources-2.snap  backpack__config__tests__merge_sources-3.snap  backpack__config__tests__merge_sources.snap  backpack__config__tests__remote_cannot_overwrite-2.snap  backpack__config__tests__remote_project_sources_fetch.snap  backpack__config__tests__selection_filtering-2.snap  backpack__config__tests__selection_filtering-3.snap  backpack__config__tests__selection_filtering.snap  backpack__config__tests__with_no_configs.snap  backpack__config__tests__with_no_global_folder-2.snap  backpack__config__tests__with_no_global_folder-3.snap  backpack__config__tests__with_no_global_folder.snap  backpack__content__tests__coord_new-2.snap  backpack__content__tests__coord_new-3.snap  backpack__content__tests__coord_new-4.snap  backpack__content__tests__coord_new-5.snap  backpack__content__tests__coord_new-6.snap  backpack__content__tests__coord_new.snap  backpack__content__tests__multiple_content_swaps.snap  backpack__content__tests__render_swaps.snap  backpack__content__tests__render_swaps_inflections.snap  backpack__merge__tests__merge.snap  backpack__merge__tests__merge_left_empty.snap  backpack__merge__tests__merge_right_empty.snap  backpack__swapper__tests__multiple_content_swaps.snap  backpack__swapper__tests__render_swaps.snap  backpack__swapper__tests__render_swaps_inflections.snap  backpack__templates__tests__multiple_content_swaps.snap  backpack__templates__tests__render_swaps.snap  backpack__templates__tests__render_swaps_inflections.snap  custom_config@[]-[hygen]-[].snap  custom_config@[]-[jondot_hygen]-[].snap  custom_config@[]-[rust-starter]-[].snap  custom_config@[gh]-[hygen]-[].snap  custom_config@[gh]-[jondot_hygen]-[].snap  (+27 more)
backpack/tests/: git_test.rs  runner_test.rs  vendors_test.rs
backpack/tests/fixtures/: local-project.yaml  merge-sources.yaml
backpack/tests/fixtures/content/SWAP_ME/: hey.txt
backpack/tests/snapshots/: runner_test__run_source_dest.snap  runner_test__run_source_dest_single_file.snap  runner_test__run_source_dest_subfolder.snap  runner_test__run_source_gist.snap  runner_test__run_source_single_file.snap  runner_test__run_with_actions.snap  runner_test__run_with_actions_say_no.snap  runner_test__run_with_actions_say_no_without_break.snap  runner_test__run_with_actions_say_yes.snap  runner_test__run_with_local_project_actions.snap  runner_test__run_with_local_project_actions_git_mode-2.snap  runner_test__run_with_local_project_actions_git_mode.snap  vendors_test__bitbucket.snap  vendors_test__github.snap  vendors_test__gitlab.snap
rustwrap/: root.json  rustwrap.yaml  sub.json
website/: docusaurus.config.js  package.json
xtask/: Cargo.toml
(+14 files in other folders)
