[package]
name = "backpack"
version = "2.1.1"
edition = "2021"


#
# == This is a dual CLI + library crate. ==
#
# * To turn this into a pure library crate, remove [[features]] and [[bin]],
#   and remove optional deps.
# * To turn into a pure CLI crate, do the same as before, but don't remove
#   optional deps, turn them into non-optional.
#
# To use both as dual crate:
#
# 1. For a CLI, nothing needs to be done.
# 2. For a library, build using `--no-default-features`, and depend using `default-features = false`
#


[dependencies]

clap = { version = "3", features = ["cargo"], optional = true }
serde = "1"
serde_json = "1"
serde_derive = "1"
serde_yaml = "^0.8.24"
serde_regex = "^1.1.0"
env_logger = "^0.9.0"
log = "^0.4.17"
anyhow = "1"
console = "^0.15.0"
url = "2"
git-url-parse = "^0.4.2"
lazy_static = "1"
regex = "1"
cached-path = "^0.5.3"
tempfile = "3"
walkdir = "2"
dirs = "4"
tracing = "^0.1.34"
merge-struct = "0.1.0"
reqwest = { version = "^0.11.11", features = ["blocking"] }
requestty = "0.4.0"
requestty-ui = "0.4.0"
tracing-forest = { version = "^0.1.4" }
tracing-subscriber = { version = "^0.3.11", features = ["env-filter"] }
# interactive-actions = "1.0.1"
# interactive-actions =  { path = "../../interactive-actions/interactive-actions" }
interactive-actions =  { git = "https://github.com/strowk/interactive-actions.git" }
tera = "^1.17.0"
tera-text-filters = "^1.0.0"
content_inspector = "0.2.4"
edit = "*"

[dev-dependencies]
insta = { version = "1.17.1", features = ["backtrace", "redactions"] }
fs_extra = "^1.2.0"
rstest = "^0.14.0"
pretty_assertions = "1"
serial_test = "0.4.0"


[features]
default = ["cli"]
# list optionals here:
cli = ["clap"]

[[bin]]
name = "bp"
required-features = ["cli"]
